# FarmExc

./: CI_CD_VERIFICATION.md  DID_IMPLEMENTATION_SUMMARY.md  FINAL_PR_DESCRIPTION.md  PR_DESCRIPTION.md  README.md
Contracts/: .gitignore  CONTRACTS.md  Cargo.toml  GOVERNANCE_GUIDE.md  UPGRADEABILITY.md
Contracts/contracts/academy/: Cargo.toml
Contracts/contracts/academy-rewards/: Cargo.toml
Contracts/contracts/did-registry/src/: lib.rs
Contracts/contracts/fee-distribution/: Cargo.toml
Contracts/contracts/fee-distribution/src/: lib.rs  test.rs
Contracts/contracts/identity-hub/src/: lib.rs
Contracts/contracts/liquidity-mining/src/: lib.rs
Contracts/contracts/liquidity_pool/: Cargo.toml
Contracts/contracts/liquidity_pool/src/: lib.rs  (+1 more)
Contracts/contracts/reputation_oracle/: Cargo.toml
Contracts/contracts/social_rewards/: Cargo.toml
Contracts/contracts/timelock-vault/: Cargo.toml
Contracts/contracts/token/: Cargo.toml
Contracts/contracts/trading/: Cargo.toml
Contracts/docs/: timelock-vault-security-model.md
Contracts/integration-tests/test_snapshots/: simulate_upgrade_across_two_contracts.1.json  test_academy_rewards_trigger_social_rewards.1.json  test_messaging_contract_initializes_successfully.1.json  test_messaging_double_initialization_blocked.1.json  test_messaging_notifications_from_other_contract_flows.1.json  test_shared_governance_module_across_contracts.1.json  test_trading_interacts_with_fee_distribution.1.json
Contracts/shared/: Cargo.toml
Contracts/shared/src/: events.rs  governance.rs  lib.rs  safe_call.rs  timelock_vault.rs
Contracts/shared/tests/: governance.rs
(+137 files in other folders)
