[workspace]
members = [
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/messaging",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/synthetic-assets",

    "contracts/stablecoin_reserve",
    "contracts/liquidity_pool",



    "contracts/tcr",
    "integration-tests",
    "shared",
]
resolver = "2"