[workspace]
members = [
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/messaging",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/synthetic-assets",
    "contracts/reputation_oracle",

    "contracts/tcr",
    "integration-tests",
    "shared", "contracts/reputation_oracle",
]
resolver = "2"
