[package]
name = "token"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/libs.rs"
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "=20.5.0", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "=20.5.0", features = ["testutils"], default-features = false }
